updated swagger and README
