# docs/swagger.json
@@ -30,9 +30,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/v1/person": {
+            },
             "post": {
                 "description": "Creates person using json",
                 "consumes": [
@@ -64,7 +62,7 @@
                 }
             }
         },
-        "/api/v1/person/{username}": {
+        "/api/v1/people/{username}": {
             "get": {
                 "description": "gets a specific person based on their username",
                 "produces": [
